# aichallenge-2024

aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/map/: traj_race_cl.csv
aichallenge/workspace/src/aichallenge_submit/casadi/: CMakeLists.txt
aichallenge/workspace/src/aichallenge_submit/path_to_trajectory/include/path_to_trajectory/: csv_to_trajectory.hpp
aichallenge/workspace/src/aichallenge_submit/path_to_trajectory/src/: csv_to_trajectory.cpp
aichallenge/workspace/src/aichallenge_submit/racing_lqr/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/racing_lqr/include/racing_lqr/: racing_lqr.hpp  racing_lqr_config.hpp  ros_param_loader.hpp
aichallenge/workspace/src/aichallenge_submit/racing_lqr/src/: racing_lqr.cpp  ros_param_loader.cpp
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/: CMakeLists.txt  CMakeLists.txt_  package.xml
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/include/simple_pure_pursuit/: simple_pure_pursuit.hpp
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/src/: simple_pure_pursuit.cpp
